2007-02-27  Jean-Christophe Baillie  <baillie@gostai.com>

	The .automerge file has been added, with proper initialization.
	Automerge is now usable, it will keep conflicts on ChangeLog, to be
	resolved by hand until some smart trick is found.
	Please, use automerge now to handle merging in a nice and automatic
	way. 
	NB: the automerge script is located in common/automerge

	add automerge support. 
	* .automerge: New.

2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Let UString use std::string
	* src/ustring.hh, src/ustring.cc (len_): Remove.
	Adjust ctors to refuse construction from 0.
	(len_): Now a std::string.
	Adjust all the code
	* src/uexpression.cc, src/uvariablename.cc: Adjust.

2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	mem-track.hh
	This is needed because ustring.hh needs to include utypes.hh,
	and conversely.  Of course, it does not work.  And huge *.hh
	files are bad.
	* src/mem-track.hh: New.
	Extracted from...
	* src/utypes.hh: here.
	* src/Makefile.am: Adjust.

2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Fix uninitialized variable warning
	* src/userver.hh, src/userver.cc (memory): here.
	While we're at it, give this function a proper prototype,
	and useful variable names.

2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Scope reduction
	* src/userver.cc (memory): Here.

2007-02-24  Akim Demaille  <akim.demaille@free.fr>

	Morph slowly UString into std::string
	* src/ustring.hh, src/ustring.cc (str, len): Rename as...
	(c_str, size): these.
	(setLen): Remove, unused, and frankly, should never have existed.

	* src/parser/bison/ugrammar.y,
	* src/parser/bison/utoken.l,
	* src/parser/uparser.cc,
	* src/ucallid.cc,
	* src/ucallid.hh,
	* src/ucommand.cc,
	* src/uconnection.cc,
	* src/ueventhandler.cc,
	* src/ueventinstance.cc,
	* src/ueventmatch.cc,
	* src/uexpression.cc,
	* src/ufunction.cc,
	* src/ugroup.cc,
	* src/unamedparameters.cc,
	* src/uobj.cc,
	* src/uobject.cc,
	* src/userver.cc,
	* src/uvalue.cc,
	* src/uvar.cc,