@@ -1,3 +1,10 @@
+2007-03-01  Akim Demaille  <akim.demaille@free.fr>
+
+	tagequal
+	* src/uvariablename.cc (prefix, suffix): Move to...
+	* src/ustring.hh, src/ustring.cc: here.
+	(tagequal): Remove, unused.
+
 2007-02-27  Jean-Christophe Baillie  <baillie@gostai.com>
 
 	The .automerge file has been added, with proper initialization.
